--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "typescript": "~4.1.5"
   },
   "engines": {
-    "node": "14.17.0",
-    "npm": "6.14.13"
+    "node": "14.x",
+    "npm": "6.x"
   }
 }
